# puppynet

./: .gitignore  AGENTS.md  Cargo.toml  readme.md
.codex/environments/: environment.toml
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: args.rs  gui.rs  installer.rs  main.rs  shell.rs  updater.rs  utility.rs
core/: Cargo.toml
core/http_assets/: index.css  index.html  index.js  media_receiver.js  monitor_stream.js  trackpad.js
core/src/: app.rs  audio.rs  auth.rs  cosmic_capture.rs  db.rs  desktop_input.rs  http_api.rs  lib.rs  media_webrtc.rs  p2p.rs  puppynet.rs  scan.rs  state.rs  ui.rs  ui_style.css  updater.rs  version.rs  webcam.rs
core/src/pages/: files.rs  home.rs  login.rs  mod.rs  not_found.rs  peer.rs  peer_control.rs  peer_files.rs  peer_webcams.rs  peers.rs  search.rs  settings.rs  storage.rs  updates.rs  users.rs
core/wui/: ui.wui
core/wui/layouts/: app.wui
core/wui/pages/: files.wui  home.wui  login.wui  not_found.wui  peer.wui  peer_control.wui  peer_files.wui  peer_webcams.wui  peers.wui  search.wui  settings.wui  storage.wui  updates.wui  users.wui
core/wui/partials/: file_preview_modal.wui  microphone_listener.wui  monitor_stream.wui  nav_link.wui  navbar.wui  trackpad.wui  webcam_stream.wui
daemon/: Cargo.toml
daemon/src/: control.rs  lib.rs
scripts/: install.sh
web/: package.json
web/src/: PuppyTerm.ts  api.ts  app.ts  dev.ts  index.html  layout.ts  multiselect.ts  router.ts  styles.css  treeview.ts
web/src/pages/: file.ts  files.ts  home.ts  peer-shell.ts  peers.ts  search.ts  settings.ts  storage.ts  updates.ts
