[package]
name = "puppynet"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
simple_logger = "5"
homedir = "0.3"
service-manager = "0.8"
puppynet_daemon = { path = "../daemon" }

[features]
default = []
rayon = ["puppynet_daemon/rayon"]
