[package]
name = "puppynet_core"
version = "0.1.0"
edition = "2024"

[features]
default = []
rayon = ["dep:rayon"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
infer = "0.19"
libp2p = { version = "0.56", features = ["tokio", "tcp", "identify", "noise", "yamux", "ping", "macros", "request-response", "json", "mdns"] }
log = "0.4"
mime_guess = "2"
rayon = { version = "1", optional = true }
rusqlite = { version = "0.33", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
blake3 = "1"
sysinfo = "0.35"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
