[package]
name = "puppynet_core"
version = "0.1.0"
edition = "2024"

[features]
default = []
rayon = ["dep:rayon"]

[dependencies]
anyhow = "1"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
infer = "0.19"
jsonwebtoken = "9"
libp2p = { version = "0.56", features = ["tokio", "tcp", "identify", "noise", "yamux", "ping", "macros", "request-response", "json", "mdns"] }
log = "0.4"
mime_guess = "2"
rand = "0.8"
rayon = { version = "1", optional = true }
rusqlite = { version = "0.33", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
sysinfo = "0.35"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
reqwest = { version = "0.12", features = ["json", "gzip", "rustls-tls"] }
flate2 = "1"
tar = "0.4"
zip = "2"
sha2 = { version = "0.10", features = ["oid"] }
rsa = { version = "0.9", default-features = false, features = ["sha2", "pem"] }
homedir = "0.3"
hyper = { version = "0.14", features = ["full"] }
url = "2"
axum = "0.7"
wgui = { git = "https://github.com/J45k4/wgui.git", rev = "108876086b57951aee96022ee66c2b485ed8564d", default-features = false, features = ["axum"] }
